# super-bario

./: .gitignore  Makefile  README.md  pyproject.toml
examples/: examples.py
src/super_bario/: __init__.py  progress.py
tests/: test_bar_basic.py  test_progress_wrapper.py
