[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "super-bario"
version = "0.1.2"
description = "Super Bario: A powerful multi-layout, multi-bar terminal progress system."
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
  { name = "Igor Iatsenko" }
]
keywords = ["progress", "progress bar", "terminal", "tui", "cli", "layout", "super bario"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Environment :: Console",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries",
  "Topic :: Terminals",
]

dependencies = []

[project.optional-dependencies]
tests = ["pytest>=7"]

[project.urls]
Homepage = "https://github.com/iserpent/super-bario"
Source = "https://github.com/iserpent/super-bario"
Issues = "https://github.com/iserpent/super-bario/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["super_bario*"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
